# bob_code

./: AGENTS.md  CODE_EVALUATION.md  Cargo.toml  to_read.txt
docs/: tool_dispatch_architecture.md
src/: app.rs  commands.rs  controller.rs  main.rs  prompt.rs  ui.rs
src/agent/: mod.rs
src/agent/groq/: http.rs  mod.rs  model.rs
src/agent/ollama/: gemma4.rs  mod.rs  model.rs
src/agent/openrouter/: http.rs  mod.rs  model.rs
src/components/: collapsible.rs  markdown.rs  message_block.rs  mod.rs  notification.rs  prompt_dialog.rs  response_block.rs  text_area.rs
src/models/: display.rs  mod.rs  model.rs  thread.rs  tool.rs
src/service/: clipboard.rs  mod.rs  system_call.rs
src/service/commands/: mod.rs  tree.rs
src/service/profile/: mod.rs  user_profile.rs
src/service/sub_agents/: mod.rs
src/system_prompt/: mod.rs
src/tool/: bash.rs  file.rs  http.rs  mod.rs  search.rs
