[package]
name = "babak_code"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
color-eyre = "0.6.5"
copypasta = "0.10.2"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
dirs = "6.0.0"
futures = "0.3.32"
pulldown-cmark = "0.13.4"
ratatui = { version = "0.30.0", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.20.0", features = ["json"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["json", "serde_json", "env-filter"] }
